Uncited -> Further Reading, remove irrelevant uncited references

--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -162,13 +162,9 @@
 \printbibliography[title={Bibliography},category=cited,heading=bibintoc]
 \endgroup
 
-% Further Reading
-% \citesupplementary{Alvarez.etal-1992}
-% \printbibliography[title={Weiterf{"u}hrende Literatur},category=supplementary,resetnumbers=true,heading=bibintoc]
 
-% Debug: uncited
 \nocite{*}
-\printbibliography[title={Uncited},notcategory=cited,resetnumbers=true,heading=bibintoc]
+\printbibliography[title={Further Reading},notcategory=cited,resetnumbers=true,heading=bibintoc]
 
 \appendix
 % \include{appn1}
